# growth-agent

./: .env.example  .gitignore  AI_AGENT_TUTORIAL.md  README.md  growth-agent.service.example  pyproject.toml  test_selection_strategy.py
data/: manifest.json  processed_posts.json
data/schemas/: blog_post.md  curated_item.md  inbox_item.md  rss_feed.md  x_creator.md
data/social_listener/config/: blog_sources.json  sources.json
data/subscriptions/: rss_feeds.jsonl  x_creators.jsonl
docs/: AGENTS.md  RAPIDAPI_ENDPOINT_GUIDE.md  SKILL.md  posthog-llms.txt  prd.md
prompts/: README.md  blog_generation.txt  blog_generation_user.txt  content_evaluation.txt  content_evaluation_user.txt
scripts/: COMMANDS.md  README.md  add_subscriptions.py  create_gsc_creds.py  curate_content.py  discord_notify.py  generate_blog.py  init_data.py  reddit_patrol.py  run_all.sh  run_workflow_b.sh  seed_subscriptions.py  sync_content.py  sync_github_issues.py  sync_metrics.py  workflow_a.sh  workflow_b.sh  workflow_c.sh  workflow_d.sh  workflow_d_and_notify.sh
scripts/tests/: generate_posthog_report.py  test_posthog.py  test_posthog_verbose.py
src/growth_agent/: config.py  main.py
src/growth_agent/core/: llm.py  logging.py  prompts.py  scheduler.py  schema.py  storage.py  vector_store.py
src/growth_agent/ingestors/: github.py  gsc_search_console.py  metrics.py  posthog.py  rss_feed.py  x_twitter.py
src/growth_agent/processors/: blog_generator.py  curator.py  ranker.py
src/growth_agent/reddit_patrol/: __init__.py  main.py
tests/: test_social_listener.py
(+29 files in other folders)
